--- a/자바스크립트/맛집지도/style.css
+++ b/자바스크립트/맛집지도/style.css
@@ -8,7 +8,7 @@
 
 * { padding: 0; margin: 0; box-sizing: border-box; }
 html { font-size: 10px; font-family: "KyoboHandwriting2020A"; }
-nav { /* background-color: #e69a06; */  }
+/* nav { background-color: #e69a06; } */
 .nav-container { padding: 1rem 0; display: flex;flex-direction: row; justify-content: space-between; align-items: center; }
 main { margin-top:0rem; }
 .nav-contact { font-size: 2.5rem; border: 0; background: none; cursor: pointer; font-family: inherit;}
