--- a/project/metagame/style.css
+++ b/project/metagame/style.css
@@ -1,6 +1,6 @@
 * { margin: 0; padding: 0;  }
 body {  background: #333; height: 100%; }
-img { display: block; vertical-align:top; }
+img { display: block;  }
 #gameContent { height:100vh; width: 100%; display: flex; overflow: hidden; }
 .game_container { position: relative; background-image: url('./img/gameBackground.png'); background-size: cover; width: 465px; height: 834px;margin: auto; }
 
