--- a/project/metagame/style.css
+++ b/project/metagame/style.css
@@ -1,7 +1,7 @@
 * { margin: 0; padding: 0;  }
 body {  background: #333; height: 100%; }
 img { display: block;  }
-#gameContent { height:100vh; width: 100%; display: flex; overflow: hidden; }
+#gameContent { position: relative; height:100vh; width: 100%; display: flex; overflow: hidden; }
 .game_container { position: relative; background-image: url('./img/gameBackground.png'); background-size: cover; width: 465px; height: 834px;margin: auto; }
 
 @keyframes cha-default {
@@ -40,10 +40,10 @@ img { display: block;  }
 
 
 .acadeNail { position: absolute; top: 60px;left: 350px; }
-.acadeNail-Section { position: absolute; left: 350px;  top: 245px; width:70px; height: 20px;  }
+.acadeNail-Section { position: absolute; left: 350px;  top: 250px; width:70px; height: 30px;  }
 
 .blueleoNail { position: absolute; top: 60px;left: 50px; }
-.blueleoNail-Section { position: absolute; left: 50px; top: 245px; width:70px; height: 20px;   }
+.blueleoNail-Section { position: absolute; left: 50px; top: 250px; width:70px; height: 30px;   }
 
 .indegoFlow { position: absolute; top: 350px; left: 12px; }
 .morderBlackNail { position: absolute; top: 450px; left: 12px; }
@@ -54,7 +54,41 @@ img { display: block;  }
 .roseNail-section { position: absolute; top: 550px; left: 90px; width:30px; height: 120px;  }
 
 .minji { position: absolute; top: 300px; left: 380px; }
+.minji-section { position: absolute; top: 320px; left: 330px; height: 125px; width: 80px; }
 .helin { position: absolute; top: 440px; left: 350px; }
+.helin-section { position: absolute; top: 460px; left: 300px; height: 130px; width: 80px; }
 .dainel { position: absolute; top: 600px; left: 380px; }
+.dainel-section { position: absolute; top: 620px; left: 330px; height: 130px; width: 80px; }
 
+
+.text_wrap { display: none; position: fixed; width:465px; height: 834px; z-index: 2; }
+.dim { content: ''; display: block; position: absolute; width:100%; 
+   height: 100%; background: rgba(0,0,0,0.5); }
+   .text_wrap .text_box { color: #000; width: calc(100% - 40px); position: absolute; bottom: 0; display: block; padding: 30px 20px; background:#f7f7f7 }
+   .close { position: absolute; top: -40px; left: 0; line-height: 1em; padding: 10px;
+      color: #fff; width: 100%; text-align: center; display: block; opacity: 0.5;
+      
+   }
+.text_box p { display: block; width: 100%; }
+
+@media screen and (max-width: 465px ) {
+   .text_wrap { width:100%;  position: absolute;  }
+}
+
+
+@media screen and (max-height: 834px ) {
+   .text_wrap { height: 100%;  }
+}
+
+
+@keyframes enter {
+   from {
+      opacity: 0;
+   }
+   to {
+      opacity: 1;
+   }
+  }
+
+.character-wrap span {  display: none; color: #fff; font-weight: 600; position: absolute; top: -20px; width: 100%; text-align: center; animation: enter 0.5s infinite ; }
 /* .sectioncolor {background: rgba(142, 252, 138, 0.8);   } */
