--- a/project/metagame/style.css
+++ b/project/metagame/style.css
@@ -77,8 +77,8 @@ img { display: block;  }
 
 .text_box > span { opacity: .3; display: none; position: absolute; right: 30px; bottom: 30px; }
 .arrowBtnWrap {z-index: 2; align-items: center; justify-content: center; position: absolute; right:20px; bottom: 20px; width: 120px; height: 120px;  background: rgba(20,20,20,0.5); border: 1px solid #555;  border-radius: 50%; }
-.enter { border-radius: 5px; font-size: 13px;  animation: enter 1s alternate infinite ; z-index: 2; display: none; align-items: center; 
-justify-content: center;   position: absolute; left:20px; bottom: 30px; padding: 10px 20px; background: rgba(20,20,20,0.5); color: rgba(255,255,255,0.8);}
+.enter { border-radius: 18px; font-size: 13px;  animation: enter 1.5s alternate infinite ; z-index: 2; display: none; align-items: center; 
+justify-content: center;   position: absolute; right:160px; bottom: 50px;  width:80px; height: 50px; background: #fff; color: #000;}
 
 
 @media screen and (max-width: 465px ) {
@@ -88,8 +88,8 @@ justify-content: center;   position: absolute; left:20px; bottom: 30px; padding:
    .text_box img { width: 30%;  top:20%; left: 35%; margin-left: 0; }
    
    .arrowBtnWrap  { position: fixed; bottom: 20px; right: 20px; }
-   .enter  {  position: fixed;  left:20px; bottom: 30px;  }
-   .character-wrap span  { display: none !important; }
+   .enter  {  position: fixed;   }
+   /* .character-wrap span  { display: none !important; } */
 }
 @media screen and (min-width: 600px ) {
    /* .text_box img { width: 150px;  position: fixed; bottom:55%; left: 50%; margin-left: -75px; } */
@@ -105,7 +105,7 @@ justify-content: center;   position: absolute; left:20px; bottom: 30px; padding:
 
 @keyframes enter {
    from {
-      opacity: 0.5;
+      opacity: 0.6;
    }
    to {
       opacity: 1;
