진짜 마지막

--- a/project/metagame/style.css
+++ b/project/metagame/style.css
@@ -66,6 +66,8 @@ img { display: block;  }
    height: 100%; background: rgba(0,0,0,0.5); }
 .text_wrap .text_box { min-height: 80px; color: #000; width: calc(100% - 60px); border-top-left-radius: 10px; border-top-right-radius: 10px;
    position: absolute; bottom: 0; display: block; padding: 30px 30px; background:#f7f7f7 }
+   .pc{ display: block; }
+   .mobile{ display: none; }
 .close { position: absolute; top: -40px; left: 0; line-height: 1em; 
    color: #fff; width: 100%; text-align: center; display: block; opacity: 0.5; 
    cursor: pointer;
@@ -76,9 +78,10 @@ img { display: block;  }
 .text_box a {  font-size: 13px; display: inline-block; text-decoration: none; padding: 10px 20px; background: #000; color: #fff; }
 
 .text_box > span { opacity: .3; display: none; position: absolute; right: 30px; bottom: 30px; }
-.arrowBtnWrap {z-index: 2; align-items: center; justify-content: center; position: absolute; right:20px; bottom: 20px; width: 120px; height: 120px;  background: rgba(20,20,20,0.5); border: 1px solid #555;  border-radius: 50%; }
+.text_box > span  > span { font-size: 11px; } 
+.arrowBtnWrap {z-index: 2; align-items: center; justify-content: center; position: absolute; left:20px; bottom: 20px; width: 120px; height: 120px;  background: rgba(20,20,20,0.5); border: 1px solid #555;  border-radius: 50%; }
 .enter { border-radius: 18px; font-size: 13px;  animation: enter 1.5s alternate infinite ; z-index: 2; display: none; align-items: center; 
-justify-content: center;   position: absolute; right:160px; bottom: 50px;  width:80px; height: 50px; background: #fff; color: #000;}
+justify-content: center;   position: absolute; left:160px; bottom: 50px;  width:80px; height: 50px; background: #fff; color: #000;}
 
 
 @media screen and (max-width: 465px ) {
@@ -90,6 +93,8 @@ justify-content: center;   position: absolute; right:160px; bottom: 50px;  width
    .arrowBtnWrap  { position: fixed; bottom: 20px; right: 20px; }
    .enter  {  position: fixed;   }
    /* .character-wrap span  { display: none !important; } */
+   .pc{ display: none; }
+   .mobile{ display: block; }
 }
 @media screen and (min-width: 600px ) {
    /* .text_box img { width: 150px;  position: fixed; bottom:55%; left: 50%; margin-left: -75px; } */
