--- a/project/metagame/style.css
+++ b/project/metagame/style.css
@@ -1,4 +1,4 @@
-* { margin: 0; padding: 0;  }
+* { margin: 0; padding: 0; font-family: 'Noto Sans KR', sans-serif; }
 body {  background: #333; height: 100%; overflow: hidden; overscroll-behavior-y: none; touch-action: none;}
 img { display: block;  }
 #gameContent { position: relative; height:100vh; width: 100%; display: flex; overflow: hidden;  touch-action: none;}
