--- a/project/metagame/style.css
+++ b/project/metagame/style.css
@@ -79,9 +79,9 @@ img { display: block;  }
 
 .text_box > span { opacity: .3; display: none; position: absolute; right: 30px; bottom: 30px; }
 .text_box > span  > span { font-size: 11px; } 
-.arrowBtnWrap {z-index: 2; align-items: center; justify-content: center; position: absolute; left:20px; bottom: 20px; width: 120px; height: 120px;  background: rgba(20,20,20,0.5); border: 1px solid #555;  border-radius: 50%; }
+.arrowBtnWrap {z-index: 2; align-items: center; justify-content: center; position: absolute; right:20px; bottom: 20px; width: 120px; height: 120px;  background: rgba(20,20,20,0.5); border: 1px solid #555;  border-radius: 50%; }
 .enter { border-radius: 18px; font-size: 13px;  animation: enter 1.5s alternate infinite ; z-index: 2; display: none; align-items: center; 
-justify-content: center;   position: absolute; left:160px; bottom: 50px;  width:80px; height: 50px; background: #fff; color: #000;}
+justify-content: center;   position: absolute; right:160px; bottom: 50px;  width:80px; height: 50px; background: #fff; color: #000;}
 
 
 @media screen and (max-width: 465px ) {
@@ -104,6 +104,7 @@ justify-content: center;   position: absolute; left:160px; bottom: 50px;  width:
 
 @media screen and (max-height: 834px ) {
    .text_wrap { height: 100%; bottom: 0;  }
+   .enter { position: fixed;  }
    .arrowBtnWrap  { position: fixed; bottom: 20px; }
 }
 
