--- a/project/metagame/style.css
+++ b/project/metagame/style.css
@@ -3,7 +3,7 @@
   -moz-user-select:none;
   -ms-user-select:none;
   user-select:none;
-
+  overscroll-behavior-y: none; touch-action: none;
    margin: 0; padding: 0; font-family: 'Noto Sans KR', sans-serif; }
 body {  background: #333; height: 100%; overflow: hidden; overscroll-behavior-y: none; touch-action: none;}
 img { display: block;  }
