--- a/project/metagame/style.css
+++ b/project/metagame/style.css
@@ -8,7 +8,7 @@
 body {  background: #333; height: 100%; overflow: hidden; overscroll-behavior-y: none; touch-action: none;}
 img { display: block;  }
 #gameContent { position: relative; height:100vh; width: 100%; display: flex; overflow: hidden;  touch-action: none;}
-.game_container { position: relative;  overflow: hidden; width: 465px; background-image: url('./img/gameBackground.png'); background-size: cover;  height: 834px;margin: auto; }
+.game_container { position: relative; width: 465px; background-image: url('./img/gameBackground.png'); background-size: cover;  height: 834px;margin: auto; }
 
 @keyframes cha-default {
  from {
@@ -92,7 +92,7 @@ justify-content: center;   position: absolute; right:160px; bottom: 50px;  width
 
 @media screen and (max-width: 465px ) {
    #gameContent  { position: fixed; width: 100%; top: 0; left: 0; }
-   /* .game_container { width: 100%; } */
+   .game_container { position: absolute; }
    .text_wrap { width:100%;  position: fixed;  top: 0; left: 0;  }
    .text_box img { width: 30%;  top:20%; left: 35%; margin-left: 0; }
    
@@ -107,7 +107,12 @@ justify-content: center;   position: absolute; right:160px; bottom: 50px;  width
    .enter  { display: none !important; }
    .arrowBtnWrap { display: none !important; }
 }
-
+@media screen and (min-height: 834px ) {
+   /* .game_container {
+      top: 50%;
+      margin-top: -412px;
+  } */
+}
 @media screen and (max-height: 834px ) {
    .text_wrap { height: 100%; bottom: 0;  }
    .enter { position: fixed;  }
