--- a/project/metagame/style.css
+++ b/project/metagame/style.css
@@ -7,7 +7,7 @@
    margin: 0; padding: 0; font-family: 'Noto Sans KR', sans-serif; }
 body {  background: #000; height: 100%; overflow: hidden; overscroll-behavior-y: none; touch-action: none;}
 img { display: block;  }
-#gameContent { position: relative; height:100vh; width: 100%; display: flex; overflow: hidden;  touch-action: none;}
+#gameContent { position: relative; height:100vh; width: 100%; display: flex;   touch-action: none;}
 .game_container { position: relative; width: 465px; background-image: url('./img/gameBackground.png'); background-size: cover;  height: 834px;margin: auto; }
 
 @keyframes cha-default {
