--- a/project/metagame/style.css
+++ b/project/metagame/style.css
@@ -5,7 +5,7 @@
   user-select:none;
   overscroll-behavior-y: none; touch-action: none;
    margin: 0; padding: 0; font-family: 'Noto Sans KR', sans-serif; }
-body { position: fixed; top: 0; left: 0; background: #000; height: 100%; overflow: hidden; overscroll-behavior-y: none; touch-action: none;}
+body { width: 100%; position: fixed; top: 0; left: 0; background: #000; height: 100%; overflow: hidden; overscroll-behavior-y: none; touch-action: none;}
 img { display: block;  }
 #gameContent { position: relative; height:100vh; width: 100%; display: flex;   touch-action: none;}
 .game_container { position: relative;  background-image: url('./img/gameBackground.png'); background-size: cover;margin: auto; }
